--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
 <a id="timer" class="anchor" href="#timer" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="timer/">Timer</a>
 </h2>
 
-<p><img src="./timer/timer.png" alt="Timer"></p>
+<p><img src="https://github.com/junjunguo/HumanComputerInteraction/timer/timer.png" alt="Timer"></p>
 
 <h2>
 <a id="calculator" class="anchor" href="#calculator" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="Calculator/">Calculator</a>
 </h2>
 
-<p><img src="./Calculator/calculator.png" alt="Calculator"></p>
+<p><img src="https://github.com/junjunguo/HumanComputerInteraction/Calculator/calculator.png" alt="Calculator"></p>
 
 <h2>
 <a id="currency-converter" class="anchor" href="#currency-converter" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="currencyConverter/">Currency Converter</a>
 </h2>
 
-<p><img src="./currencyConverter/currencyconverter2.png" alt="Currency Converter"></p>
+<p><img src="https://github.com/junjunguo/HumanComputerInteraction/currencyConverter/currencyconverter2.png" alt="Currency Converter"></p>
         </section>
 
         <footer>
