--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 <a id="menneske-maskin-interaksjon-mmi" class="anchor" href="#menneske-maskin-interaksjon-mmi" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Menneske-Maskin-Interaksjon MMI)</h2>
 
 <h2>
-<a id="timer" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/timer" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="timer/">Timer</a>
+<a id="timer" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/timer" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/timer/">Timer</a>
 </h2>
 
 <p><img src="https://raw.githubusercontent.com/junjunguo/HumanComputerInteraction/master/timer/timer.png" alt="Timer"></p>
 
 <h2>
-<a id="calculator" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/calculator" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="Calculator/">Calculator</a>
+<a id="calculator" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/calculator" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/Calculator/">Calculator</a>
 </h2>
 
 <p><img src="https://raw.githubusercontent.com/junjunguo/HumanComputerInteraction/master/Calculator/calculator.png" alt="Calculator"></p>
 
 <h2>
-<a id="currency-converter" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/currencyConverter" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="currencyConverter/">Currency Converter</a>
+<a id="currency-converter" class="anchor" href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/currencyConverter" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/junjunguo/HumanComputerInteraction/tree/master/currencyConverter/">Currency Converter</a>
 </h2>
 
 <p><img src="https://raw.githubusercontent.com/junjunguo/HumanComputerInteraction/master/currencyConverter/currencyconverter2.png" alt="Currency Converter"></p>
